<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/about_menu" />
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/experience_main" />
        <item
            android:id="@+id/nav_skill"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/skill_main" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/social_menu" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
