<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="androidproject.com.materialdeisgnnavigationdrawer.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_height="220dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/background_img"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/gundam"
                android:layout_height="145dp" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="8dp"
                android:text="@string/name"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/profile_image"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:id="@+id/name_text"
                android:layout_marginTop="135dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="8dp"
                android:text="@string/email"
                android:padding="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:id="@+id/email_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="165dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>




    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="260dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="8dp"
                android:text="@string/title"
                android:padding="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lineSpacingExtra="8dp"
                android:text="@string/bio"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45dp"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
